<resources>
    <string name="app_name">Cashy</string>
    <string name="tts_lang">en_US</string>
    <string name="title_activity_assistant">Assistant</string>

    <!-- GENERAL -->
    <string name="check_fields">Please check all of the fields.</string>
    <string name="error_getting_data">Error while fetching data</string>
    <string name="getting_info">Getting information…</string>
    <string name="adding_to_db_toast">OK, adding that to DB…</string>
    <string name="adding_to_db_tts">OK, adding that to database.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search…</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="amount">Amount: </string>
    <string name="click_2_delete">To delete the item - click on its name</string>
    <string name="sure_delete">Are you sure you want to delete this?</string>
    <string name="sure_exit">Do you want to exit?</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="delete_success">Item removed successfully</string>
    <string name="about_message">Cashy: Your true money bro.\nCreated by Rodion Grinberg\nhttp://rbeat.gq\nadmin@rbeat.gq</string>

    <!-- LOGIN SCREEN -->
    <string name="welcome_login">Welcome to Cashy!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="iforgot">  Forgot password?  </string>
    <string name="operation_registering">Registering…</string>
    <string name="register_success">Registered successfully.</string>
    <string name="register_fail">Failed. Your E-mail could be the problem…</string>
    <string name="iforgot_instructions">Enter your email and then, click "Forgot password?" again.</string>
    <string name="iforgot_success">Check your email for password recovery instructions.</string>
    <string name="iforgot_fail">Failed. Check the email or try again later.</string>
    <string name="operation_signing_in">Signing in…</string>
    <string name="sign_in_success">Signed in successfully.</string>
    <string name="sign_in_fail">Failed. Check your credentials or try again later.</string>

    <!-- SETUP SCREEN -->
    <string name="setup_tv1">Hi! Welcome to Cashy!</string>
    <string name="setup_tv2">Tell me, what is your name?</string>
    <string name="setup_tv3">Let\'s talk money. How much do you have right now?</string>
    <string name="name_example">John Appleseed</string>
    <string name="setup_et1">Your balance. Example: 3.14</string>
    <string name="setup_et2">Your credit balance. Example: 19.54</string>

    <!-- ASSISTANT SCREEN -->
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="welcome">Welcome, </string>
    <string name="intro_tts">What do you want to do today?</string>
    <string name="welcome_loading">Hi! Welcome to Cashy!\nGetting information…</string>
    <string name="current_balance">Current Balance</string>
    <string name="current_balance_warning">Current Balance (!!!)</string>
    <string name="add_money">Add Money</string>
    <string name="spend_money">Spend Money</string>
    <string name="add_bills">Add bills to pay</string>
    <string name="show_bills">Show my bills</string>
    <string name="show_spends">Show my expenses</string>
    <string name="mute_tts">Mute assistant</string>
    <string name="unmute_tts">UnMute assistant</string>
    <string name="logout">Logout</string>

    <!-- BALANCE SCREEN -->
    <string name="balance">Balance: </string>
    <string name="credit">Credit: </string>
    <string name="available">Available: </string>
    <string name="intro_balance_tts">Here\'s how broke we are.</string>
    <string name="low_balance_tts">Be careful! Your balance is low.</string>
    <string name="low_available_tts">Man, stop spending your money. Your balance and credit are too low..</string>
    <string name="ok_available_tts">No worries. Everything\'s OK.</string>

    <!-- ADD BILLS SCREEN -->
    <string name="add_bills_tv1">Let\'s say, you need to pay for something monthly. \nHow much do you need to spend on it?</string>
    <string name="add_bills_et1">Sum to pay. (Example: 19.78)</string>
    <string name="add_bills_tv2">What is it? \Name it.</string>
    <string name="add_bills_et2">Name. (Example: Internet)</string>
    <string name="add_bills_bt">Add</string>
    <string name="intro_bills_tts">Let\'s add your bills. One bill, two bill, three.</string>

    <!-- ADD MONEY SCREEN -->
    <string name="intro_money_tts">Got some money? Got more credit?</string>
    <string name="current_credit_hint">Current: </string>
    <string name="add_money_tv1">Got some money?</string>
    <string name="add_money_et1">Sum to add. (Example: 19.72)</string>
    <string name="add_money_tv2">Got bigger credit? \nChange it.</string>
    <string name="add_money_et2">Current credit: Getting…</string>
    <string name="add_money_bt">Add</string>

    <!-- SPEND MONEY SCREEN -->
    <string name="intro_spends_tts">Here\'s what you spent your money on.</string>
    <string name="intro_spend_money_tts">How much would you like to spend? What would you like to spend it on?</string>
    <string name="out_of_money_tts">You\'re out of money, but you do have credit. Would you like to proceed?</string>
    <string name="out_of_money_tv">You\'re out of money, \nbut you do have credit. Would you like to proceed?</string>
    <string name="not_enough_money">Sorry, you don\'t have enough money to spend. You have bills to pay.</string>
    <string name="spend_money_tv1">Tell me, how much you want to spend?</string>
    <string name="spend_money_et1">Sum to spend. (Example: 20.14)</string>
    <string name="spend_money_tv2">What you are spending it on?</string>
    <string name="spend_money_et2">Name of Item. (Example: Sneakers)</string>
    <string name="spend_money_bt">Spend</string>
    <string name="spend_money_confirm">Confirm</string>

    <!-- SHOW MY BILLS -->
    <string name="intro_show_bills_tts">Here\'s what you should save your money for.</string>
    <string name="show_bills_tv">List of bills</string>

    <!-- SHOW MY SPENDS -->
    <string name="intro_show_spends_tts">Here\'s what you\'ve spend your money on.</string>
    <string name="show_spends_tv">List of spends</string>


</resources>
